Para Entrega Bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@ footer {
   border-radius: 10% ;
 }
 
+.contacto__btn-enviar {
+  background-color: #cfad89;
+  border: 0;
+}
+
 /*
 .container-home {
   display: grid;
