Aplicando SASS II

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background: $color-primario;
+  background: linear-gradient(90deg, $Celestial-Blue, $Bahamas-Blue, $Eggshell-Brown);
     color: white;
     text-align: center;
     height: 50px;
