--- a/css/style_sass.css
+++ b/css/style_sass.css
@@ -1,11 +1,82 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Italianno&display=swap");
 footer {
-  background: #78b2c4;
+  background: -webkit-gradient(linear, left top, right top, from(#2191D0), color-stop(#01D7D9), to(#EAE5D2));
+  background: linear-gradient(90deg, #2191D0, #01D7D9, #EAE5D2);
   color: white;
   text-align: center;
   height: 50px;
   padding: 10px;
+}
+
+.btn-contactanos {
+  background: #004290;
+  color: white;
+  padding: 5px 20px;
+  font-size: x-large;
+  text-decoration: none;
+  border-radius: 0.25rem;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 0;
+}
+
+.btn-talleres {
+  background: #AF9A7D;
+  color: white;
+  padding: 5px 20px;
+  font-size: x-large;
+  text-decoration: none;
+  border-radius: 0.25rem;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 0;
+}
+
+.btn-formulario {
+  background: #2191D0;
+  color: white;
+  padding: 5px 20px;
+  font-size: x-large;
+  text-decoration: none;
+  border-radius: 0.25rem;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 0;
+}
+
+.btn-contactanos:hover {
+  color: white;
+  background: #EAE5D2;
+}
+
+.btn-talleres:hover {
+  color: white;
+  background: #EAE5D2;
+}
+
+.btn-formulario:hover {
+  color: white;
+  background: #EAE5D2;
+}
+
+.titularPagina, .titularPagina--center {
+  font-size: 3rem;
+  color: #004290;
+  padding: 15px;
+}
+
+.subTitularPagina, .subTitularPagina--center {
+  font-size: 1.5rem;
+  color: #777 !important;
+}
+
+.titularPagina--center {
+  text-align: center;
+}
+
+.subTitularPagina--center {
+  text-align: center;
 }
 
 * {
@@ -14,7 +85,7 @@ footer {
 }
 
 /* Body
--------------------------------------------------- */
+------------------------------------------------- */
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -24,12 +95,12 @@ body {
 .navbar {
   border-radius: 0px;
   border: 0px;
-  background: -webkit-gradient(linear, left top, right top, from(#78b2c4), to(#eae5d2));
-  background: linear-gradient(90deg, #78b2c4, #eae5d2);
+  background: -webkit-gradient(linear, left top, right top, from(#2191D0), color-stop(#01D7D9), to(#EAE5D2));
+  background: linear-gradient(90deg, #2191D0, #01D7D9, #EAE5D2);
 }
 
 .navbar nav li a {
-  color: black !important;
+  color: white !important;
 }
 
 .navbar nav li a:hover {
@@ -50,6 +121,16 @@ body {
   color: white;
 }
 
+.slide img {
+  height: 65vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 /* Otros customs o Boostrap
 --------------------------------------------------- */
 .img-fluid-logo {
@@ -57,16 +138,22 @@ body {
 }
 
 .content-img {
-  width: 300px;
-  height: 300px;
   padding: 10px;
   margin: 10px;
   border-radius: 10%;
+  width: 300px;
+  height: 300px;
 }
 
 /* AQUI USO UN & */
 .container-sm__btn-enviar {
   background-color: #eae5d2;
   border: 0;
+}
+
+@media only screen and (max-width: 963px) {
+  .slide img {
+    width: auto !important;
+  }
 }
 /*# sourceMappingURL=style_sass.css.map */
