--- a/sass/style_sass.scss
+++ b/sass/style_sass.scss
@@ -4,15 +4,75 @@
 @import 'variables';
 @import 'footer';
 
+// Maps
+$botonera: (
+  'contactanos': $Congress-Blue,
+  'talleres': $Brown-Sugar,
+  'formulario': $Celestial-Blue,
+);
+
+@each $key, $val in $botonera {
+  .btn-#{$key} {
+    background: $val;
+    color: white;
+    padding: 5px 20px;
+    font-size: x-large;
+    text-decoration: none;
+    border-radius: 0.25rem;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 0;
+  }
+}
+
+@each $key, $val in $botonera {
+  .btn-#{$key}:hover {
+    color: white;
+    background: $Eggshell-Brown;
+  }
+}
+
+// Fin Maps
+
+// Mixin
+@mixin size-content-img($w_h) {
+  width: $w_h;
+  height: $w_h;
+}
+// Fin Mixin
+
+//extend
+.titularPagina {
+  font-size: 3rem;
+  color: $Congress-Blue;
+  padding: 15px;
+}
+
+.subTitularPagina {
+  font-size: 1.5rem;
+  color: $gris-mediterraneo !important;
+}
+
+.titularPagina--center {
+  @extend .titularPagina;
+  text-align: center;
+}
+
+.subTitularPagina--center {
+  @extend .subTitularPagina;
+  text-align: center;
+}
+//Fin extend
+
+
+
 * {
   padding: 0;
   margin: 0;
 }
 
-
-
 /* Body
--------------------------------------------------- */
+------------------------------------------------- */
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -22,10 +82,10 @@ body {
 .navbar {
   border-radius: 0px;
   border: 0px;
-  background: linear-gradient(90deg, $color-primario, $color-secundario);
+  background: linear-gradient(90deg, $Celestial-Blue, $Bahamas-Blue, $Eggshell-Brown);
 
   nav li a {
-    color: black !important;
+    color: white !important;
   }
 
   nav li a:hover {
@@ -53,6 +113,12 @@ body {
   }
 }
 
+.slide img {
+  height: 65vh;
+  display: flex;
+  justify-content: center;
+}
+
 /* Otros customs o Boostrap
 --------------------------------------------------- */
 .img-fluid-logo {
@@ -60,19 +126,22 @@ body {
 }
 
 .content-img {
-  width: 300px;
-  height: 300px;
   padding: 10px;
   margin: 10px;
   border-radius: 10%;
+  @include size-content-img(300px);
 }
 
 /* AQUI USO UN & */
 .container-sm {
-   &__btn-enviar {
+  &__btn-enviar {
     background-color: $color-secundario;
     border: 0;
   }
 }
 
-
+@media only screen and (max-width: 963px) {
+  .slide img{
+    width: auto !important;
+  }
+}
