Aplicando SASS II + SEO Desafio

--- a/css/style_sass.css
+++ b/css/style_sass.css
@@ -122,13 +122,14 @@ body {
 }
 
 .slide img {
-  height: 65vh;
+  height: 75vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  text-align: center;
 }
 
 /* Otros customs o Boostrap
