--- a/sass/style_sass.scss
+++ b/sass/style_sass.scss
@@ -114,10 +114,12 @@ body {
 }
 
 .slide img {
-  height: 65vh;
+  height: 75vh;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
+
 
 /* Otros customs o Boostrap
 --------------------------------------------------- */
